syntax = "proto3";

package post;

option go_package='./pb';

message Tag {
  string id = 1;
  string name = 2;
}

message Post {
  string id = 1;
  int64 createAt = 2;
  bool isAnonymous = 3;
  string title = 4;
  string text = 5;
  string coverUrl = 6;
  repeated Tag tags = 7;
  int64 user_id = 8;
  int64 status = 9;
  bool is_delete=10;
  int64 deleteAt=11;
}

message ListReq {
  int64 skip = 1;
  int64 count = 2; // 获取的数量
}

message ListResp {
  repeated Post posts = 1;
}

message RetrieveReq {
  string postId = 1;
}

message RetrieveResp {
  Post post = 1;
}

message CreatReq {
  Post post = 1;
}

message CreatResp {
  string postId = 1;
}

message UpdateReq {
  Post post = 1;
}

message UpdateResp {
}

message DestroyReq {
  string postId = 1;
}

message DestroyResp {
}

service postRPC {
  rpc List(ListReq) returns (ListResp);
  rpc Retrieve(RetrieveReq) returns (RetrieveResp);
  rpc Creat(CreatReq) returns (CreatResp);
  rpc Update(UpdateReq) returns (UpdateResp);
  rpc Destroy(DestroyReq) returns (DestroyResp);
}